# machine-learning-projects

./: .gitignore  README.md  movie_recommendation_engine.py  naive_bayes_example.py  pyproject.toml  tree_based_classifier.py
duckdb_ml/: main.py
ml_API_example/: main.py  main_test.py  model.py
